practicas_DGIIM/FS/ArchivosModuloII/sesion08/práctica9.md~
## Prácticas 8
## Blanca Cano Camarero
### Ejercicio 8.1. Pruebe a comentar en el archivo fuente main.cpp la directiva de procesamiento “#include ”functions.h”. La línea quedaría así: //include ”functions.h”. Pruebe a generar ahora el módulo objeto con la orden de compilación mostrada anteriormente. ¿Qué ha ocurrido?
```
blanca@debian:~/cultutrilla/practicas_DGIIM/FS/ArchivosModuloII/sesion08$ g++ -c main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:17: error: ‘print_hello’ was not declared in this scope
     print_hello();
                 ^
main.cpp:9:52: error: ‘factorial’ was not declared in this scope
     cout << "The factorial of 7 is " << factorial(7) << endl;
                                                    ^
```
Como podemos apreciar nos indica que la funciones declarada en `functions.h` no las detecta. 